--- a/src/components/Main/Profile/Profile.css
+++ b/src/components/Main/Profile/Profile.css
@@ -221,3 +221,28 @@
     left: 15px;
   }
 }
+
+@media only screen and (max-width: 320px) {
+  .profile {
+    flex-direction: column;
+    margin: auto;
+    align-items: center;
+  }
+  .project-info {
+    display: none;
+  }
+  .profile-pic {
+    width: 120px;
+    height: 120px;
+  }
+  .profile-content {
+    margin: 0;
+    text-align: center;
+  }
+  .profile-left {
+    font-size: 20px;
+  }
+  .user-info {
+    font-size: 16px;
+  }
+}
